--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ttrentsou-job-scheduling",
-  "version": "1.0.0", 
+  "version": "1.0.1",
   "description": "A package that allows developers to schedule and manage recurring tasks within applications. This could include support for cron-like scheduling, task dependencies, and error handling.",
   "main": "./src/index.js",
   "scripts": {
@@ -11,10 +11,13 @@
     "url": "https://github.com/ttrentsou/ttrentsou-job-scheduling.git"
   },
   "keywords": [
-    "", 
+    "",
     "",
     ""
   ],
   "author": "ttrentsou",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "ttrentsou-errorlogger": "^1.0.3"
+  }
 }
